--- a/Basics/010_Python_Control.ipynb
+++ b/Basics/010_Python_Control.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "# Iterating over values with Python\n",
-    "Visualize VSWR for multiple antenna lengths."
+    "### Visualize VSWR for multiple antenna lengths."
    ]
   },
   {
@@ -125,14 +125,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot relationship of antenna height and elevation of peak response"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a list of designs using a list comprehension\n",
-    "zs = [5,10,20,30,50,70,100]\n",
-    "designs = [necdeck.format(z=z, y=10.3/2) for z in zs]\n",
+    "zs = [5,10,20,30,50,70,100]                                 # Antenna heights\n",
+    "designs = [necdeck.format(z=z, y=10.3/2) for z in zs]       # Fixed dipole length of 10.3m\n",
     "\n",
     "# .. and run the simulations in parallel\n",
     "results = nec5_sim_stdio3(designs)"
@@ -144,14 +151,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract a list of elevations of peak response\n",
     "elevs = []\n",
-    "for res in results:\n",
-    "    rp = res[1][0][0][1]\n",
-    "    rp0 = rp[rp[:,1]==0.0]\n",
-    "    idx = np.argmax(rp0[:,2])\n",
-    "    elevs.append(90.0 - rp[idx, 0])\n",
+    "for res in results:                     # Loop through corresponding results for our list of designs\n",
+    "    rp = res[1][0][0][1]                # Rad pat array for this design (see later notebooks for more details)\n",
+    "    rp0 = rp[rp[:,1]==0.0]              # Select only rows with azimuth=0\n",
+    "    idx = np.argmax(rp0[:,2])           # Get index of row with highest response\n",
+    "    elevs.append(90.0 - rp[idx, 0])     #  and get corresponding elevation (= 90 - phi)\n",
     "\n",
-    "# [res[1][0][0][1][np.argmax(res[1][0][0][1][:,2]), 0] for res in results]"
+    "# 'rp' is a numpy array that looks like:\n",
+    "#           phi     theta       dBi     theta=azimuth, phi=angle from vertical (not horizon)\n",
+    "# array([[   0.  ,    0.  ,    6.21],\n",
+    "#        [   1.  ,    0.  ,    6.21],\n",
+    "#        [   2.  ,    0.  ,    6.2 ],\n",
+    "#        ...,\n",
+    "#        [  88.  ,  360.  ,    6.82],\n",
+    "#        [  89.  ,  360.  ,    2.08],\n",
+    "#        [  90.  ,  360.  , -999.99]])\n"
    ]
   },
   {
@@ -171,6 +187,7 @@
     }
    ],
    "source": [
+    "# Standard matplotlib scatter plot\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(4,4))\n",
@@ -180,41 +197,6 @@
     "ax.grid(True)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
