--- a/Basics/Quick_Start.ipynb
+++ b/Basics/Quick_Start.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# A Basic Example: Modeling a Simple Dipole Antenna\n",
-    "Demonstrates the simulation of a dipole in free space, and displaying some results."
+    "Demonstrates the simulation of a dipole over ground, and displaying some results."
    ]
   },
   {
@@ -21,19 +21,19 @@
     "\n",
     "# Create a simple NEC design:\n",
     "#  dipole designed for 14.1 MHz using familiar 468/freq design equation\n",
-    "#  free space (no ground)\n",
+    "#  MININEC ground\n",
     "#  compute feedpoint impedance in band 14.0 - 15.0 MHz\n",
     "#  \n",
     "necdeck = '\\n'.join(\n",
     "    ['CE Dipole',               # Comment\n",
-    "     'GW 1 20 0 -5.06 20 0 5.06 20 .001',   # Wire element, 20 segments, from (0,-5.06,0) to (0,5.06,0)  (lengths in meters)\n",
+    "     'GW 1 20 0 -5.06 20 0 5.06 20 .001',   # Wire element, 20 segments, from (0,-5.06,20) to (0,5.06,20)  (lengths in meters)\n",
     "     'GE 1 0',                  # End of geometry; ground plane specified\n",
     "     'GD 0 0 0 0 13 0.005 0 0', # Some typical MININEC ground parameters\n",
     "     'EX 4 1 10 2 1.0 0.0',     # Excitation: current source (1A), tag=1, segment=10, far end=2\n",
     "     'FR 0 11 0 0 14.0 0.1',    # Frequencies for XQ card: 14.0 - 15.0 MHz\n",
     "     'XQ 0',                    # Simulate feedpoint impedance\n",
     "     'FR 0 1 0 0 14.1 0',       # Frequency for RP card: 14.1 MHz\n",
-    "     'RP 0 91 361 0000 0 0 1 1',    # Simulate radiation pattern\n",
+    "     'RP 0 91 361 0000 0 0 1 1',    # Simulate radiation pattern on 1deg grid\n",
     "     'EN\\n'                     # End\n",
     "    ])\n"
    ]
@@ -45,6 +45,7 @@
    "outputs": [],
    "source": [
     "# Run the simulation\n",
+    "# Returns a nested list of simulation data for one or more designs\n",
     "result = nec5_sim_stdio3([necdeck])\n"
    ]
   },
@@ -108,6 +109,7 @@
     }
    ],
    "source": [
+    "# Elevation radiation pattern\n",
     "plot_elevation([rparr], [''])"
    ]
   },
