--- a/Basics/020_Understanding_Response_Format.ipynb
+++ b/Basics/020_Understanding_Response_Format.ipynb
@@ -31,7 +31,8 @@
     "Running simulations of NEC5 antenna designs involves creating each design as a single python string, then passing a list of any number of designs to one of the nec_sim_* functions:\n",
     "```python\n",
     "results = nec_sim_stdio3([design0, design1, ...])\n",
-    "```\n"
+    "```\n",
+    "which will execute the simulations as separate processes and return a nested list of results, described in detail below."
    ]
   },
   {
