--- a/Basics/010_Python_Control.ipynb
+++ b/Basics/010_Python_Control.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,14 +103,14 @@
     "     'FR 0 11 0 0 14.0 0.1',    # Frequencies for XQ card: 14.0 - 15.0 MHz\n",
     "     'XQ 0',                    # Simulate feedpoint impedance\n",
     "     'FR 0 1 0 0 14.2 0',       # Frequency for RP card: 14.2 MHz\n",
-    "     'RP 0 91 361 0000 0 0 1 1',    # Simulate radiation pattern on 1deg grid\n",
+    "     'RP 0 91 360 0000 0 0 1 1',    # Simulate radiation pattern on 1deg grid\n",
     "    'EN\\n'                     # End\n",
     "    ])\n",
     "\n",
     "\n",
     "# Create a list of designs using a list comprehension\n",
-    "lengths = [10.2,10.3,10.4,10.5] # Dipole length (m)\n",
-    "designs = [necdeck.format(y=ln/2, z=20) for ln in lengths]\n",
+    "lengths = [10.2, 10.3, 10.4, 10.5]                              # Dipole length (m)\n",
+    "designs = [necdeck.format(y=ln/2, z=20) for ln in lengths]      # A list of strings (multiple NEC5 designs)\n",
     "\n",
     "# .. and run the simulations in parallel\n",
     "results = nec5_sim_stdio3(designs)\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,8 @@
     }
    ],
    "source": [
+    "# Extract impedance curves (lists of freq/complex-z pairs)\n",
     "zcurves = [res[0][0] for res in results]\n",
-    "\n",
     "\n",
     "# [[[14.0, (72.329-41.725j)],\n",
     "#   [14.1, (73.239-32.024j)],\n",
@@ -155,12 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a list of designs using a list comprehension\n",
-    "zs = [5,10,20,30,50,70,100]                                 # Antenna heights\n",
+    "zs = [5,10,20,30,50,70,100]                                 # Antenna heights (m)\n",
     "designs = [necdeck.format(z=z, y=10.3/2) for z in zs]       # Fixed dipole length of 10.3m\n",
     "\n",
     "# .. and run the simulations in parallel\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,17 +179,17 @@
     "    rp = res[1][0][0][1]                # Rad pat array for this design (see later notebooks for more details)\n",
     "    rp0 = rp[rp[:,1]==0.0]              # Select only rows with azimuth=0\n",
     "    idx = np.argmax(rp0[:,2])           # Get index of row with highest response\n",
-    "    elevs.append(90.0 - rp[idx, 0])     #  and get corresponding elevation (= 90 - phi)\n",
+    "    elevs.append(90.0 - rp[idx, 0])     #  and get corresponding elevation (= 90 - theta)\n",
     "\n",
     "# 'rp' is a numpy array that looks like:\n",
-    "#           phi     theta       dBi     theta=azimuth, phi=angle from vertical (not horizon)\n",
+    "#          theta     phi       dBi     theta=angle from vertical (not horizon), phi=azimuth,\n",
     "# array([[   0.  ,    0.  ,    6.21],\n",
     "#        [   1.  ,    0.  ,    6.21],\n",
     "#        [   2.  ,    0.  ,    6.2 ],\n",
     "#        ...,\n",
-    "#        [  88.  ,  360.  ,    6.82],\n",
-    "#        [  89.  ,  360.  ,    2.08],\n",
-    "#        [  90.  ,  360.  , -999.99]])\n"
+    "#        [  88.  ,  359.  ,    6.82],\n",
+    "#        [  89.  ,  359.  ,    2.07],\n",
+    "#        [  90.  ,  359.  , -999.99]])\n"
    ]
   },
   {
@@ -218,6 +218,32 @@
     "ax.set_ylabel('Elevation (deg)')\n",
     "ax.grid(True)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0.  ,    0.  ,    6.21],\n",
+       "       [   1.  ,    0.  ,    6.21],\n",
+       "       [   2.  ,    0.  ,    6.2 ],\n",
+       "       ...,\n",
+       "       [  88.  ,  359.  ,    6.82],\n",
+       "       [  89.  ,  359.  ,    2.07],\n",
+       "       [  90.  ,  359.  , -999.99]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rp"
    ]
   },
   {
