--- a/Basics/030_Basic_Yagi_Design.ipynb
+++ b/Basics/030_Basic_Yagi_Design.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "# Basic Yagi Design\n",
-    "![Graph](img/xy.png)"
+    "![Graph](img/yagi%201.png)"
    ]
   },
   {
