--- a/Basics/030_Basic_Yagi_Design.ipynb
+++ b/Basics/030_Basic_Yagi_Design.ipynb
@@ -27,6 +27,8 @@
    "metadata": {},
    "source": [
     "# Basic Yagi Design\n",
+    "\n",
+    "# Uniform Elements\n",
     "![Graph](img/yagi%201.png)"
    ]
   },
@@ -82,6 +84,14 @@
     "# Plot rad patterns for each freq in a grid\n",
     "freqs,arrs = zip(*result[0][1][0])\n",
     "plot_azimuth_thumb(arrs, titles=freqs, nolabels=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi-Section Elements\n",
+    "![Graph](img/yagi%202.png)"
    ]
   },
   {
