--- a/Wire Antennas/010_Wire_Antennas.ipynb
+++ b/Wire Antennas/010_Wire_Antennas.ipynb
@@ -26,8 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wire Antenna Basics\n",
-    "Design, Visualization, Simulation"
+    "# Wire Antenna Basics:  Design, Visualization, Simulation"
    ]
   },
   {
