--- a/Wire Antennas/010_Wire_Antennas.ipynb
+++ b/Wire Antennas/010_Wire_Antennas.ipynb
@@ -47,13 +47,229 @@
     "We're adopting the convention that antenna elements run parallel to the y axis, and that NEC will mirror elements across the x-z plane, so a simple 40 meter dipole at an elevation of 20 meters would be specified as:\n",
     "```\n",
     "my_40m_dipole = [np.array([[0,0,20], [0,10,20]])]\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Some useful utility functions:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "# Slightly simplified syntax for specifying our arrays of segments:\n",
+    "#  make_linear_element((0,0,0), (1,1,1), (2,3,4))   -->    [np.array([[0,0,0], [1,1,1], [2,3,4]])]\n",
+    "def make_linear_element(*args):\n",
+    "    return [np.array(args)]\n",
+    "\n",
+    "\n",
+    "# Total wire length in a design\n",
+    "def total_wire_len(des):\n",
+    "    return np.sum( [np.sum(np.linalg.norm(np.diff(arr,axis=0),axis=1)) for arr in des] )\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Translate and rotate antenna elements  (either a single array or list of arrays)\n",
+    "#\n",
+    "def _rot(elem,arr):\n",
+    "    if isinstance(elem, list):\n",
+    "        return [el @ arr for el in elem]\n",
+    "    return elem @ arr\n",
+    "def rot_x(elem,ang):\n",
+    "    return _rot(elem, np.array([[1,0,0],[0,np.cos(ang),np.sin(ang)],[0,-np.sin(ang),np.cos(ang)]]))\n",
+    "def rot_y(elem,ang):\n",
+    "    return _rot(elem, np.array([[np.cos(ang),0,-np.sin(ang)],[0,1,0],[np.sin(ang),0,np.cos(ang)]]))\n",
+    "def rot_z(elem,ang):\n",
+    "    return _rot(elem, np.array([[np.cos(ang),np.sin(ang),0],[-np.sin(ang),np.cos(ang),0],[0,0,1]]))\n",
+    "\n",
+    "def translate(elem, dxyz):\n",
+    "    rowarr = np.array([dxyz])\n",
+    "    if isinstance(elem, list):\n",
+    "        return [el + rowarr for el in elem]\n",
+    "    return elem + rowarr\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Create a cage dipole element: cylindrical arrangement of 'n' wires with conical sections at ends\n",
+    "# Element will be constructed along y axis, between points y=y0 and y=y1\n",
+    "#       a:      height of conical section\n",
+    "#       r:      cylinder radius\n",
+    "#       n:      number of parallel wires\n",
+    "#\n",
+    "def make_cage_element(y0, y1, a, r, n):\n",
+    "    seg = np.array([[0,y0,0],[0,y0+a,r],[0,y1-a,r],[0,y1,0]])\n",
+    "    segs = [seg]\n",
+    "    for i in range(1,n):\n",
+    "        rads = i*2*np.pi/n\n",
+    "        segs.append(rot_y(seg, rads))\n",
+    "    return segs\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# Simple wire antenna visualizer\n",
+    "#\n",
+    "#   segs        list of numpy arrays, each containing x,y,z coords of nodes in a segment\n",
+    "#   x,y,z       range of each axis, e.g. x=(-10,10) --> x-axis spans -10meters - +10meters\n",
+    "#   name        displayed when hovering\n",
+    "#\n",
+    "def wire_ant_visualize(segs,x,y,z,name='',width=800, height=700, mirror=True):\n",
+    "\n",
+    "    # Create some visual elements: sxy = 'ground level', sxz = mirroring plane (transparent)\n",
+    "    # To change colors, see https://plotly.com/python/builtin-colorscales/\n",
+    "    sxy = go.Surface(x=x, y=y, z=np.full((2,2),0), colorscale='Greens', surfacecolor=np.full((2,2),0.69), showscale=False,cmin=0,cmax=1)\n",
+    "    sxz = go.Mesh3d(x=(x[0],x[0],x[1],x[1]), y=(0,0,0,0), z=(z[0],z[1],z[1],z[0]), i=(0,0),j=(1,2),k=(2,3),color='lightpink', opacity=0.1, hoverinfo='skip')\n",
+    "    \n",
+    "    # Make a (possibly) multi-segment trace segment for display\n",
+    "    #  arr: numpy array of x,y,z coords, shape = (#points, 3)\n",
+    "    def make_trace(arr):\n",
+    "        return go.Scatter3d(\n",
+    "            x=arr[:,0], y=arr[:,1], z=arr[:,2],\n",
+    "            marker=dict(size=2, color='red'),               # Set color, size of nodes\n",
+    "            line=dict(color='darkblue', width=2),           # Set color, thickness of line\n",
+    "            name=name, showlegend=False                     # 'name' is displayed when you hover\n",
+    "        )\n",
+    "    # Mirror list of arrays across xz plane\n",
+    "    def mirror_xz(arrs):\n",
+    "        mxz = np.array([[-1,-1,1]])\n",
+    "        return [ar * mxz for ar in arrs]\n",
+    "    \n",
+    "    fig = go.Figure(data=[sxy, sxz])                        # Create the figure, with fixed visual elements\n",
+    "    for seg in segs:\n",
+    "        fig.add_trace(make_trace(seg))                  # Add the wire segments\n",
+    "    if mirror:\n",
+    "        for seg in mirror_xz(segs):\n",
+    "            fig.add_trace(make_trace(seg))                  # ...and their mirrored versions\n",
+    "\n",
+    "    # Set up appearance: size of viewer, range for each axis, etc.\n",
+    "    fig.update_layout(\n",
+    "        width=width, height=height, autosize=False,\n",
+    "        scene=dict(\n",
+    "            # 'eye' is your initial viewing angle\n",
+    "            camera=dict(up=dict(x=0,y=0,z=1),  eye=dict(x=1,y=.3,z=0.3)),\n",
+    "            # Relative display sizes of axes; this produces a square patch in xy plane, with z (elevation) half that length\n",
+    "            # aspectratio = dict( x=1, y=1, z=0.5 ),\n",
+    "            aspectratio = dict( x=1, y=1, z=1.0 ),\n",
+    "            aspectmode = 'manual',\n",
+    "            # Limits of each axis, in meters\n",
+    "            xaxis=dict(range=x, showbackground=False),\n",
+    "            yaxis=dict(range=y, showbackground=False),\n",
+    "            zaxis=dict(range=z, showbackground=False),\n",
+    "        ),\n",
+    "    )\n",
+    "\n",
+    "    fig.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# \n",
+    "# gen_nec5_str()\n",
+    "# Convert antenna descriptions (list of numpy arrays) to NEC5 cards (single string)\n",
+    "#\n",
+    "# Accepts a list of numpy arrays; each array describes one or more segments connected in series\n",
+    "# E.g. np.array([[0,0,0], [1,2,3], [2,5,4]]) --> two segments, connecting (0,0,0) to (1,2,3) to (2,5,4)\n",
+    "#\n",
+    "# Args:\n",
+    "#       arrs        a list of arrays as described above (all dimensions in meters)\n",
+    "#       segs_per_m  number of NEC segments per meter of wire length\n",
+    "#                   * these are the NEC segments used in the simulation;\n",
+    "#                      I've been confusingly also using the term for the wire conncting two points (see above)\n",
+    "#       tag         tag used on all NEC cards generated\n",
+    "#       radius      wire radius (meters)\n",
+    "#\n",
+    "\n",
+    "# Clunky numba version: typical exec time 50-60us vs 300us for more elegant version that follows\n",
+    "from numba import njit\n",
+    "@njit\n",
+    "def gen_nec5_str_inner(arr, segs_per_m):\n",
+    "    s = []\n",
+    "    for i in range(arr.shape[0]-1):\n",
+    "        lng = np.sqrt(np.sum(np.square(arr[i+1] - arr[i])))\n",
+    "        s.append(( np.maximum(int(np.rint(lng*segs_per_m)), 1), arr[i,0],arr[i,1],arr[i,2],arr[i+1,0],arr[i+1,1],arr[i+1,2] ))\n",
+    "    return s\n",
+    "def gen_nec5_str(arrs, segs_per_m, radius, tag=1):\n",
+    "    ls = []\n",
+    "    gw = 'GW {0} {1} {2} {3} {4} {5} {6} {7} {8}\\n'\n",
+    "    # For each array...\n",
+    "    for arr in arrs:\n",
+    "        data = gen_nec5_str_inner(arr, segs_per_m)\n",
+    "        for d in data:\n",
+    "            ls.append( gw.format(tag, *d, radius))\n",
+    "    return ''.join(ls)\n",
+    "\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple example: 40 meter dipole"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GW 1 10 0 0 20 0 10 20 0.001\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Half of a 40m dipole, elevation = 20m\n",
+    "dipole_40m = make_linear_element((0,0,20), (0,10,20))\n",
+    "\n",
+    "# Converting the design to NEC5 cards (don't need this yet....)\n",
+    "SEGS_PER_M = 1.0            \n",
+    "gen_nec5_str(dipole_40m, SEGS_PER_M, radius=0.001, tag=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "may_2023",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
