--- a/Wire Antennas/010_Wire_Antennas.ipynb
+++ b/Wire Antennas/010_Wire_Antennas.ipynb
@@ -257,7 +257,11 @@
     "* pan (right button)\n",
     "* hover over nodes to view coordinates\n",
     "\n",
-    "By default the design is mirrored across the x-z plane."
+    "By default the design is mirrored across the x-z plane.\n",
+    "\n",
+    "You'll need to run this notebook locally to see the live viewer...\n",
+    "\n",
+    "![Graph](img/Dipole_40m.png)"
    ]
   },
   {
