--- a/Wire Antennas/010_Wire_Antennas.ipynb
+++ b/Wire Antennas/010_Wire_Antennas.ipynb
@@ -1314,7 +1314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A more picturescue example:  inverted-vee cage dipole\n",
+    "### A more picturesque example:  inverted-vee cage dipole\n",
     "\n",
     "\n",
     "![Graph](img/Cage_vee.png)"
