--- a/Wire Antennas/020_Intro_to_Optimization.ipynb
+++ b/Wire Antennas/020_Intro_to_Optimization.ipynb
@@ -47,19 +47,107 @@
     "\n",
     "We'll be using the excellent Pymoo optimization library [https://pymoo.org](https://pymoo.org).\n",
     "\n",
-    "In the following pages we're going to specify wire antenna designs using lists of numpy arrays,\n",
-    "one row per endpoint:\n",
-    "```\n",
-    "my_ant = [np.array([[x0,y0,z0], \n",
-    "                    [x1,y1,z1], \n",
-    "                    [x2,y2,z2], \n",
-    "                     ..... ])]\n",
-    "```\n",
-    "Most designs will need only one array of serially-connected segments, but some (see the cage dipole below) will require a list of several arrays.\n",
+    "This library contains a host of optimization algorithms, but at the moment we'll only be using a simple single-objective genetic algorithm. Elsewhere on this site we'll have examples of more advanced tasks, e.g. multi-objective optimization to explore trade-offs between forward gain, F/B, and bandwidth in Yagi design.\n",
     "\n",
-    "We're adopting the convention that antenna elements run parallel to the y axis, and that NEC will mirror elements across the x-z plane, so a simple 40 meter dipole at an elevation of 20 meters would be specified as:\n",
-    "```\n",
-    "my_40m_dipole = [np.array([[0,0,20], [0,10,20]])]"
+    "\n",
+    "\n",
+    "### Example 1: A Simple Dipole\n",
+    "\n",
+    "Find the optimum length for a dipole antenna to minimize the peak VSWR within a frequency range.\n",
+    "\n",
+    "Pymoo requires the creation of a Problem class that encapsulates the details of the problem to be solved. You should be able to reuse this code with only minor modification for your own similar designs.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymoo.core.problem import Problem\n",
+    "from necutil import nec5_sim_stdio3\n",
+    "\n",
+    "\n",
+    "#\n",
+    "# A base class for simple single-objective problems (e.g. minimize dipole vswr within a band)\n",
+    "#\n",
+    "class DipoleSingleOptProblem(Problem):\n",
+    "    \n",
+    "    # \n",
+    "    def __init__(self, n_var, segs_per_m, radius, f_min, f_max, z, f_num=9, **kwargs):\n",
+    "        super().__init__(n_var=n_var,\n",
+    "                         n_obj=1,\n",
+    "                         n_ieq_constr=0,\n",
+    "                         **kwargs)\n",
+    "\n",
+    "\n",
+    "        self.f_min = f_min              # Frequency band of interest: min, max, # of points\n",
+    "        self.f_max = f_max\n",
+    "        self.f_num = f_num        \n",
+    "        self.freqs = np.linspace(f_min, f_max, num=f_num)       # Freqs of interest as an array\n",
+    "        self.f_center = np.mean([f_min,f_max])                  # Center freq\n",
+    "        self.z0 = 50                    # TL impedance\n",
+    "        self.z = z                      # z dimension (height of antenna)\n",
+    "        self.segs_per_m = segs_per_m    # NEC secgents per meter \n",
+    "        self.radius = radius            # Wire radius (m)\n",
+    "        \n",
+    "        # NEC5 design deck template\n",
+    "        # GX: mirror across xz plane\n",
+    "        # EX: feedpoint specified as tag=1, segment=1, near end (1)\n",
+    "        # GD: Some typical MININEC ground parameters\n",
+    "        self.necpre = 'CE Dipole\\n'             # Obligatory comment line\n",
+    "        self.necpost = f\"\"\"GX 100 010\n",
+    "GE 1 0\n",
+    "GD 0 0 0 0 13 0.005 0 0\n",
+    "EX 4 1 1 1 1.0 0.0\n",
+    "FR 0 {f_num} 0 0 {f_min} {(f_max-f_min)/(f_num-1)}\n",
+    "XQ 0\n",
+    "EN\n",
+    "\"\"\"\n",
+    " \n",
+    "    def _make_nec5_design(self, x):\n",
+    "        design = self._make_design(x)                                # The design as array of endpoints\n",
+    "        nec_str = gen_nec5_str(design, self.segs_per_m, self.radius)     # Convert to a string of NEC cards\n",
+    "        return self.necpre + nec_str + self.necpost                 # Return as complete NEC deck\n",
+    "\n",
+    "\n",
+    "    # Evaluate the designs in X, an array of shape (population_size, number_of_variables)\n",
+    "    def _evaluate(self, X, out, *args, **kwargs):\n",
+    "\n",
+    "        # Customize _make_nec5_design() for your specific problem\n",
+    "        designs = [self._make_nec5_design(x) for x in X]             # Make a list of NEC decks, one per row of X\n",
+    "\n",
+    "        res = nec5_sim_stdio3(designs, timelimit=10000.0)           # Run the simulations\n",
+    "\n",
+    "        # Our 'XQ' card produces feedpoint impedances that look like:\n",
+    "        #  res[design#][0][0] = \n",
+    "                    # [[28.0, (18.156-28.716j)],\n",
+    "                    # [28.05, (18.262-26.878j)],\n",
+    "                    # [28.1, (18.338-25.051j)],\n",
+    "                    # [28.15, (18.383-23.23j)],\n",
+    "                    # [28.2, (18.396-21.412j)],\n",
+    "                    # [28.25, (18.377-19.592j)],\n",
+    "                    # [28.3, (18.325-17.767j)],\n",
+    "                    # [28.35, (18.243-15.933j)],\n",
+    "                    # [28.4, (18.129-14.086j)]]\n",
+    "\n",
+    "        # Extracts feedpoint complex z for each design --> complex array of shape (#designs, #freqs)\n",
+    "        zs = np.array([[freq[1] for freq in des[0][0]] for des in res])\n",
+    "\n",
+    "        # Each row in 'vswr_curves' is the vswr curve across the band for one of the designs\n",
+    "        abs_refl_coef = np.abs((zs - self.z0) / (zs + self.z0))         # Reflection coefs\n",
+    "        vswr_curves = (1 + abs_refl_coef) / (1 - abs_refl_coef)         # Vswr\n",
+    "        max_vswr = np.max(vswr_curves, axis=1)[:,None]                  # Max vswr within band for each design (as column vector)\n",
+    "\n",
+    "        # Return the objective value we're minimizing (simply the max vswr in this case)\n",
+    "        out[\"F\"] = max_vswr\n",
+    "\n",
+    "        # You can also attach other data to the population of designs\n",
+    "        # We'll save the vswr curves for each\n",
+    "        out[\"VSWR\"] = vswr_curves\n",
+    "\n",
+    "\n"
    ]
   }
  ],
