--- a/Wire Antennas/050_Broadband_80m_Antennas.ipynb
+++ b/Wire Antennas/050_Broadband_80m_Antennas.ipynb
@@ -47,11 +47,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<img src=\"../Cad/test1.svg\" alt=\"Drawing\" style=\"width: 400px;\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
