--- a/Wire Antennas/050_Broadband_80m_Antennas.ipynb
+++ b/Wire Antennas/050_Broadband_80m_Antennas.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![Graph](../Cad/test1.svg)"
+    "![Graph](../Cad/test1.svg)\n"
    ]
   },
   {
