--- a/Wire Antennas/050_Broadband_80m_Antennas.ipynb
+++ b/Wire Antennas/050_Broadband_80m_Antennas.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![Graph](../Cad/test1.svg)\n"
+    "![Graph](../Cad/Series_Section_Match_1.svg)\n"
    ]
   },
   {
@@ -51,7 +51,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"../Cad/test1.svg\" alt=\"Drawing\" style=\"width: 400px;\"/>\n"
+    "<!-- <img src=\"../Cad/Series_Section_Match_1.svg\" alt=\"Drawing\" style=\"width: 400px;\"/> -->\n",
+    "<img src=\"../Cad/Series_Section_Match_1.svg\" alt=\"Drawing\" />\n"
    ]
   },
   {
