--- a/Wire Antennas/050_Broadband_80m_Antennas.ipynb
+++ b/Wire Antennas/050_Broadband_80m_Antennas.ipynb
@@ -59,7 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "\n",
+    "![Graph](../Cad/Series_Section_Match_1.png)"
    ]
   },
   {
