--- a/Wire Antennas/050_Broadband_80m_Antennas.ipynb
+++ b/Wire Antennas/050_Broadband_80m_Antennas.ipynb
@@ -35,7 +35,22 @@
    "metadata": {},
    "source": [
     "\n",
-    "![Graph](../Cad/test1.png)"
+    "# A Look at Some Broadband 80 Meter Antenna Ideas\n",
+    "\n",
+    "It's well known that a standard dipole antenna can't provide a low VSWR over the entire frequency range of the 80 meter band. This notebook looks at some published designs that improve on the dipole's bandwidth. Some of the code presented in previous notebooks is used to optimize antenna geometries and feedline matching arrangements to extract maximum frequency coverage from the designs.\n",
+    "\n",
+    "Note that I haven't built or tested any of these antennas - this is merely a demonstration of simulation and optimization.\n",
+    "\n",
+    "Thanks to the authors of the various articles referenced herein.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Baseline for Comparison: A Simple Dipole\n",
+    "\n"
    ]
   },
   {
