--- a/Wire Antennas/042_Res_freq.ipynb
+++ b/Wire Antennas/042_Res_freq.ipynb
@@ -120,12 +120,12 @@
     "    # Func that converts freqs to reactance\n",
     "    def func(fs):\n",
     "        res = nec5_sim_stdio3([necstr.format(fnum=len(fs), flow=fs[0], fstep=(fs[-1]-fs[0])/(len(fs)-1))])\n",
-    "        print(necstr.format(fnum=len(fs), flow=fs[0], fstep=(fs[-1]-fs[0])/(len(fs)-1)))\n",
+    "        # print(necstr.format(fnum=len(fs), flow=fs[0], fstep=(fs[-1]-fs[0])/(len(fs)-1)))\n",
     "        return np.imag([d[1] for d in res[0][0][0]])   \n",
     "    fs = np.linspace(flow, fhigh, num=fnum)                 # Initial freqs\n",
-    "    print(fs)\n",
+    "    # print(fs)\n",
     "    xs = func(fs)                                           #  ...and values\n",
-    "    print(xs)\n",
+    "    # print(xs)\n",
     "    return zoom_to_edge(func, fs, xs, tol=0.001, reverse=False, debug=debug)\n",
     "\n",
     "\n",
