--- a/Wire Antennas/040_Matching.ipynb
+++ b/Wire Antennas/040_Matching.ipynb
@@ -353,10 +353,18 @@
     "    x = np.imag(zl) / z0a\n",
     "    thetab = np.arctan(np.sqrt(((r-1)**2 + x**2) / (r*(n-1/n)**2 - (r-1)**2 - x**2)))\n",
     "    thetaa = np.arctan(((n-r/n) * np.tan(thetab) + x) / (r + x*n*np.tan(thetab) - 1))\n",
-    "    thetaa[thetaa < 0] += np.pi\n",
+    "    if not isinstance(zl, np.ndarray):\n",
+    "        if thetaa < 0:\n",
+    "            thetaa += np.pi\n",
+    "    else:\n",
+    "        thetaa[thetaa < 0] += np.pi\n",
     "    thetabn = np.pi - thetab\n",
     "    thetaan = np.arctan(((n-r/n) * np.tan(thetabn) + x) / (r + x*n*np.tan(thetabn) - 1))\n",
-    "    thetaan[thetaan < 0] += np.pi\n",
+    "    if not isinstance(zl, np.ndarray):\n",
+    "        if thetaan < 0:\n",
+    "            thetaan += np.pi\n",
+    "    else:\n",
+    "        thetaan[thetaan < 0] += np.pi\n",
     "    return np.rad2deg(  np.array((thetaa,thetab,thetaan,thetabn)).transpose() )\n",
     "\n",
     "\n"
