--- a/Wire Antennas/051_Broadband_80m_Antennas_Part_2.ipynb
+++ b/Wire Antennas/051_Broadband_80m_Antennas_Part_2.ipynb
@@ -298,7 +298,7 @@
     "                                xl=np.array([17.0, 0.1]),                   # Lower, upper limits of parameters:\n",
     "                                xu=np.array([23.0, 1.0]))                   # Overall len [17.0, 23.0], cage fraction [0.1, 1.0]\n",
     "# Pymoo provides a variety of termination conditions\n",
-    "# For simplicity's sake we will just run for 50 nenerations\n",
+    "# For simplicity's sake we will just run for 50 generations\n",
     "termination = get_termination(\"n_gen\", 50)  \n",
     "\n",
     "# Algorithm: Multi-objective genetic algorithm\n",
@@ -1863,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1904,16 +1904,16 @@
     "GX 100 010\n",
     "GE 1 0\n",
     "GD 0 0 0 0 13 0.005 0 0\n",
-    "TL 1 -1 20 -1 {zoa} {len_a} 0 0 0 0\n",
-    "TL 20 -1 30 -1 {zob} {len_b} 0 0 0 0\n",
+    "TL 1 -1 20 -1 50 39.084 0 0 0 0\n",
+    "TL 20 -1 30 -1 75 20.21 0 0 0 0\n",
     "EX 4 30 1 1 1.0 0.0\n",
     "FR 0 {fnum} 0 0 {flow} {fstep}\n",
     "XQ 0\n",
     "EN\n",
     "\"\"\"\n",
     "\n",
-    "from necutil import plot_vswr\n",
-    "res = nec5_sim_stdio3([necstr_tl.format(zoa=50, zob=75, len_a=39.084, len_b=20.21, fnum=101, flow=3.5, fstep=0.005)])\n",
+    "from necutil import plot_vswr,find_vswr_bw\n",
+    "res = nec5_sim_stdio3([necstr_tl.format(fnum=101, flow=3.5, fstep=0.005)])\n",
     "zs = res[0][0][0]         # freqs, zs\n",
     "plot_vswr([zs], tags=[''])\n",
     "\n",
@@ -1924,10 +1924,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bandwidth for VSWR <= 2.0 (MHz): 0.621\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "bw = find_vswr_bw(necstr_tl, 2.0, 3.0, 4.5, fnum=11, tol=0.001)\n",
+    "print(f'Bandwidth for VSWR <= 2.0 (MHz): {bw:.3f}')\n"
+   ]
   },
   {
    "cell_type": "code",
